- Added RankupTeamEvent and DisbandTeamEvent to the API

Bug Fixes:
- Fixed problem causing a space to occur at the end of the money and name placeholder (#94)
- Fixed ClassCastException with pots (#98)
- Fixed bug causing invite links to not expire correctly (#93)
- Fixed bug causing ally limits to be ignored (#100)

3.1.24: 
Bug Fixes:
- Fixed a problem with /team top (#103)

3.1.25: 
Bug Fixes:
- Fixed prefixSyntax message having different coloured brackets (#115)
- Fixed bug causing essentialsX /back to not work (#109)
- Fixed bug with /team title when the player is not recognised (#112)

3.1.26:
Improvements: 
- Added placeholder for the number of online players on your team (online) (#110) 

Bug Fixes: 
- Fixed problem with rank permissions


4.0: 
Features: 
- Included a new saving system (#134) (#163)
  - this saving system will massively improve performance on your server
- Added support for Traditional Chinese 

Improvements: 
- Config updating is now completely automated
- Missing translations will be saved to a file to try and encourage community translations
- Teams can no longer spam ally requests (#148)
- Updated polish language file to contain more translations
- Added a way to remove a title with /team title (#127)

Bug Fixes:
- Fixed permission issue with /team echest (#142)
- Fixed error with command /team rank (#147)
- Fixed endCommands in /team rankup not working as expected (#152)
- Fixed bug meaning there was not a space at the start of a suffix (#158)
- Fixed error tree being displayed when update checker fails (#164)

Development changes: 
- Reworked Team class to avoid code reuse
- Removed support for the depreciated event listener BelowNameChangeListener, Use spigot event observer pattern instead (#131)
- Removed hardcoding for config updating


TODO (any TODO which is not specifically code), mainly used for reminders to update documentation

Headings: 
Features: 


Improvements:


Bug Fixes: 
